# Rust_Postgres_axum_sqlx_dioxus

./: .env  Cargo.toml  README.md  git.sh
migrations/: 20250308163204_create_posts.sql
src/: main.rs
templates/: form.html  form.rs
